runtime/pavex_macros/tests/from_request/fail/missing_body_format.rs
use pavex_macros::FromRequest;

#[derive(FromRequest)]
pub struct MyStruct {
    #[body]
    b: String,
}

fn main() {}
